// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works loading 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  -webkit-animation: igSzjp;
  animation: igSzjp;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  left: -50%;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-duration: 0.6s;
  animation-duration: 0.6s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
  animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c1"
    >
      <div
        class="c1"
      >
        <div
          class="c1 c2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`it works with button 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      body
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c1"
    />
    <div
      class="c1"
    >
      <button
        class="c0"
        elevation="1"
        kind="primary"
      >
        <div
          class="c1"
        >
          Edit
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`it works with dismissable 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      body
    </div>
  </div>
  <button
    class="c0"
    elevation="1"
    kind="tertiary"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-xmark "
        data-icon="xmark"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`it works with elevation 1`] = `
.c0 {
  box-shadow: none;
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works with elevation 2`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works with elevation 3`] = `
.c0 {
  box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 10px 13px rgba(0,0,0,0.02),0 -10px 13px rgba(0,0,0,0.02);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="2"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works with elevation 4`] = `
.c0 {
  box-shadow: 0 2px 5px rgba(0,0,0,0.16),-10px 15px 15px rgba(0,0,0,0.03),10px 0px 15px rgba(0,0,0,0.03);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="3"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works with elevation 5`] = `
.c0 {
  box-shadow: 0 2px 6px rgba(0,0,0,0.18),-15px 20px 20px rgba(0,0,0,0.04),15px -5px 20px rgba(0,0,0,0.04);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="4"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works with heading 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c3 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c3 > p {
  margin-bottom: 0.5rem;
}

.c3 > p:last-child {
  margin-bottom: 0;
}

.c2 {
  font-size: 1.875rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 700;
  color: #292B3E;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
    >
      heading
    </h2>
    <div
      class="c3"
    >
      body
    </div>
  </div>
</div>
`;

exports[`it works with image 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <img
    alt="test"
    class=""
    src=""
  />
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works with status 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`it works with status 2`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-info "
          data-icon="circle-info"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c17.67 0 32 14.33 32 32c0 17.67-14.33 32-32 32S224 177.7 224 160C224 142.3 238.3 128 256 128zM296 384h-80C202.8 384 192 373.3 192 360s10.75-24 24-24h16v-64H224c-13.25 0-24-10.75-24-24S210.8 224 224 224h32c13.25 0 24 10.75 24 24v88h16c13.25 0 24 10.75 24 24S309.3 384 296 384z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`it works with status 3`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-exclamation "
          data-icon="circle-exclamation"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM232 152C232 138.8 242.8 128 256 128s24 10.75 24 24v128c0 13.25-10.75 24-24 24S232 293.3 232 280V152zM256 400c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 385.9 273.4 400 256 400z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`it works with status 4`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Hello world
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-exclamation "
          data-icon="circle-exclamation"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM232 152C232 138.8 242.8 128 256 128s24 10.75 24 24v128c0 13.25-10.75 24-24 24S232 293.3 232 280V152zM256 400c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 385.9 273.4 400 256 400z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`it works with tag 1`] = `
.c0 {
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
}

.c1 {
  padding: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c2 > p {
  margin-bottom: 0.5rem;
}

.c2 > p:last-child {
  margin-bottom: 0;
}

.c3 {
  text-align: center;
  border-style: solid;
  border-width: 0;
  padding: 0.25rem 0;
  color: white;
  font-size: 0.75rem;
  font-weight: 500;
  border-radius: 0.6rem;
  background-color: #135f61;
}

.c4 {
  padding: 0.25rem 0.5rem;
}

<div
  class="c0"
  elevation="1"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      body
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c1"
    >
      <div
        class="c1"
      >
        <span
          class="c2 c3"
          kind="primary"
        >
          <span
            class="c4"
            kind="primary"
          >
            v1.0.0
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
